# point-process

./: README.md  pyproject.toml
experiments/: walder2017.ipynb
src/util/: sampler.py
src/walder2017/: kernels.py  method.py
