[tool.poetry]
name = "point-process"
version = "0.1.0"
description = ""
authors = ["Takeshi Teshima <takeshi.diadochos@gmail.com>"]
packages = [
    { include = "src" },
]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"

[tool.poetry.dev-dependencies]
jupyterlab = "^3.5.3"
pudb = "^2022.1.3"
ipython = "^8.9.0"

[tool.poetry.group.flaxman2017.dependencies]
scipy = "^1.10.0"
matplotlib = "^3.6.3"
pandas = "^1.5.3"


[tool.poetry.group.walder2017.dependencies]
scipy = "^1.10.0"
numpy = "^1.24.1"
matplotlib = "^3.6.3"
jupyterlab = "^3.5.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
